<resources>
    <string name="app_name">InventoryApp</string>
    <string name="products_list_empty_message">There are no products in the inventory currently.
        \nPlease go back and use the Add-Item Button to add products.</string>
    <string name="add_product_button">Add new product</string>
    <string name="delete_product_button">Delete product</string>
    <string name="button_increment">Increase quantity</string>
    <string name="button_decrement">Decrease quantity</string>
    <string name="button_sale">Sale</string>
    <string name="button_back_main">Back to products list</string>
    <string name="button_edit">Edit shown product</string>
    <string name="button_insert">Insert product</string>
    <string name="button_contact_supplier">Contact Supplier via phone</string>
    <string name="button_submit_edit">Submit edit</string>
    <string name="button_delete_yes">Yes</string>
    <string name="button_delete_no">No</string>
    <string name="button_deleted_message">Product has been deleted.</string>
    <string name="button_delete_cancel_message">Delete operation cancelled.</string>
    <string name="title_activity_details">DetailsActivity</string>
    <string name="title_activity_no_records">NoRecords</string>
    <string name="label_product_name">Name:</string>
    <string name="label_quantity">Quantity:</string>
    <string name="label_price">Price:</string>
    <string name="label_supplier_name">Supplier Name:</string>
    <string name="label_supplier_phone_number">Supplier Phone Name:</string>
    <string name="title_activity_edit">EditActivity</string>
    <string name="title_activity_add">AddActivity</string>
    <string name="toast_invalid_product_name">Please enter a product name.</string>
    <string name="toast_invalid_quantity">Please enter a valid quantity.</string>
    <string name="toast_invalid_price">Please enter a valid price.</string>
    <string name="toast_invalid_supplier_name">Please enter a supplier name.</string>
    <string name="toast_invalid_supplier_phone_number">Please enter a supplier phone number.</string>
    <string name="question_delete">Product will be deleted from inventory. Continue?</string>
    <string name="title_delete">Please confirm deletion!</string>
</resources>
