<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/label_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/product_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <TextView
        android:id="@+id/product_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/delete_product"
        android:textColor="@color/colorAccent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/delete_product_button"/>
    <Button
        android:id="@+id/increment_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_increment"/>
    <Button
        android:id="@+id/decrement_product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_decrement"/>
    <Button
        android:id="@+id/contact_supplier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_contact_supplier"/>

</LinearLayout>