<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="30dp"
    android:padding="24dp"
    android:orientation="vertical">

    <TextView
        android:text="@string/label_product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <EditText
        android:id="@+id/product_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <EditText
        android:id="@+id/product_quantity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <EditText
        android:id="@+id/product_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <EditText
        android:id="@+id/product_supplier_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <TextView
        android:text="@string/label_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="normal"/>
    <EditText
        android:id="@+id/product_supplier_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:layout_marginBottom="18dp"
        android:textStyle="bold"/>
    <Button
        android:id="@+id/insert_product"
        android:textColor="@color/colorWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_insert"/>
    <Button
        android:id="@+id/back_to_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_back_main"/>
</LinearLayout>